--- a/css/estilo.css
+++ b/css/estilo.css
@@ -48,13 +48,13 @@ body .content .login {
 }
 
 body .content .menu {
-	margin-top: 40px;
-	margin-left: 240px;
+	margin-top: 10%;
+	margin-left: 0px;
 	border-radius: 5px;
 	background: rgb(228, 223, 27);
-	padding: 10px;
+	padding: 6px 10px;
 	color: black;
-	width: 460px;
+	width: 100%;
 }
 
 body .content .header {
@@ -99,3 +99,6 @@ body .content .context {
 	width: 800px;
 	height: 210px;
 }
+
+  
+
