--- a/css/estilo.css
+++ b/css/estilo.css
@@ -64,6 +64,7 @@ body .content .header {
 	background: black;
 	top: 0;
 	padding-top: 20px;
+	z-index: 100;
 }
 
 body .content .menu li {
@@ -111,7 +112,6 @@ body .content .context {
 }
 
 .introducao {
-	background-image: url("../imagens/background.jpg");
 	display: block;
 	background-repeat: no-repeat;
 	color: transparent;
