--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /*====================*/
 /*=== Reset Styles ===*/
 /*====================*/
-html, body, div, span, applet, object, iframe,
+html, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
@@ -25,11 +25,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-size:100%;
 	font-family:inherit;
 	vertical-align:baseline;
-}
-body {
-	line-height:1;
-	color:black;
-	background:white;
 }
 table {
 	border-collapse:separate;
@@ -55,11 +50,6 @@ aside, nav, article, figure {
 /*===================*/
 /*=== Main Styles ===*/
 /*===================*/
-body {
-	font:14px/1.6 Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	color:#333;
-	background: black;
-}
 
 a, a:visited {
 	color:blue;
